--- a/HouseManage/HouseManage/Views/Shared/_Layout.cshtml
+++ b/HouseManage/HouseManage/Views/Shared/_Layout.cshtml
@@ -8,16 +8,15 @@
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link href="~/css/mui.min.css" rel="stylesheet" />
+    <link href="~/css/mui.picker.all.css" rel="stylesheet" />
 
 </head>
 <body>
-    @RenderBody()
-
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
-
     <script src="~/js/mui.min.js"></script>
-
+    <script src="~/js/mui.picker.all.js"></script>
+    @RenderBody()
     @RenderSection("Scripts", required: false)
 </body>
 </html>
