新增加载遮罩的样式。

--- a/HouseManage/HouseManage/Views/Shared/_Layout.cshtml
+++ b/HouseManage/HouseManage/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link href="~/css/mui.min.css" rel="stylesheet" />
+    <link href="~/css/mui.loading.css" rel="stylesheet" />
     <link href="~/css/mui.picker.all.css" rel="stylesheet" />
 
 </head>
@@ -16,6 +17,7 @@
     <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
     <script src="~/js/mui.min.js"></script>
+    <script src="~/js/mui.loading.js"></script>
     <script src="~/js/mui.picker.all.js"></script>
     @RenderBody()
     @RenderSection("Scripts", required: false)
